<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="string_glog_empty" />
    <string name="string_glog">GLogger</string>
    <string name="string_glog_save">保存</string>
    <string name="string_glog_module_name">ModuleName</string>
    <string name="string_glog_module_name_hint">请输入模块名称</string>
    <string name="string_glog_type_name">TypeName</string>
    <string name="string_glog_type_name_hint">请输入日志类型</string>
    <string name="string_glog_default_level">DefaultLevel</string>
    <string name="string_glog_default_level_hint">请选择Default级别:</string>
    <string name="string_glog_json_level">JsonLevel</string>
    <string name="string_glog_json_level_hint">请选择Json级别:</string>
    <string name="string_glog_format_json">FormatJson</string>
    <string name="string_glog_format_json_hint">请选择是否格式化Json:</string>
    <string name="string_glog_trace_count">TraceCount</string>
    <string name="string_glog_trace_count_hint">请输入任务栈数量</string>
    <string name="string_glog_force_show">ForceShow</string>
    <string name="string_glog_force_show_hint">请选择是否强制显示:</string>
    <string name="string_glog_show_divide">ShowDivide</string>
    <string name="string_glog_show_divide_hint">请选择是否显示分割线:</string>
    <string name="string_glog_show_all">ShowAll</string>
    <string name="string_glog_show_all_hint">请选择是否显示完整日志:</string>
    <string name="string_glog_max_length">MaxLengthCount</string>
    <string name="string_glog_max_length_hint">请输入最大行数</string>
</resources>